# AIsmartStorage

./: .gitignore  ANDROID_BUILD.md  CONTRIBUTING.md  README.md  ROADMAP.md  SmartStorageAI.apk  capacitor.config.ts  generate-android-icons.mjs  generate-icons.mjs  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: android-build.yml  build-apk.yml
Context/Docs/: PWA_TO_APK_GUIDE.md  SMART_STORAGE_AI_SPEC.md  pwa-to-apk-workflow.md
Models/: CLAUDE_CODE_SMOLLM_INTEGRATION.md  config.json  smollm2-manifest.json
android/: .gitignore  build.gradle  keystore.properties.example
android/app/: build.gradle
android/app/src/main/java/com/smartstorageai/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/capacitor-cordova-android-plugins/: build.gradle  cordova.variables.gradle
public/: manifest.json  robots.txt
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  files.rs  history.rs  mod.rs  model.rs  organize.rs
src-tauri/src/model/: assembler.rs  inference.rs  mod.rs  types.rs
src-tauri/src/storage/: mod.rs
src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  index.ts
src/components/Common/: Icons.tsx
src/components/FileTree/: FileTree.tsx  FileTreeItem.tsx
src/components/Layout/: Header.tsx  MainLayout.tsx
src/components/ModelDownload/: ModelDownloadModal.tsx  index.ts
src/components/Preview/: PreviewPanel.tsx
src/lib/: ai.ts
src/stores/: ai.ts  chat.ts  files.ts  history.ts  index.ts  model.ts  preview.ts
src/types/: index.ts
src/utils/: chatEngine.ts  db.ts  demoData.ts  fileTypes.ts  helpers.ts  index.ts  organizer.ts
